--- a/tinder.css
+++ b/tinder.css
@@ -55,6 +55,12 @@ a {
     z-index: -1;
 }
 
+.container-fluid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .cover
 {
     height: 100%;
